--- a/index.html
+++ b/index.html
@@ -7,11 +7,56 @@
 </head>
 <body>
     <header>
-       <h1>David's Tech</h1>
-
+       <p>David's Tech</p>
+          <nav id="menu">
+                <ul>
+                 <li><a href="index.html">Inicio</a></li>
+                 <li><a href="servicios.html">Servicios</a></li>
+                 <li><a href="contacto.html">Contacto</a></li>
+               </ul>
+            </nav>
     </header>
 
+    <main>
 
+    <header>
+        <h1>David's Tech | Inicio</h1>
+        <p>Una empresa por y para los desarrolladores<p>
+    </header>
+
+    <section id="bloquedeservicios">
+      <h2>
+        Nuestros servicios
+      </h2>
+
+      <article>
+        <h3>Desarrollo Web</h3>
+      <p>
+        Nos encargamos de todo lo relacionado con HTML, CSS y JavaScript
+      </p>
+      </article>
+
+      <article>
+      <h3>
+        Diseño Gráfico
+      </h3>
+      <p>
+        Nos encargamos de todo lo relacionado con Diseño UI y UX
+      </p>
+    </article>
+
+    </section>
+
+    <section id="contenido-relacionado">
+          <h2>Contenido Relacionado</h2>
+          <p>Explora mas sobre nuestras solcuiones avanzadas para mejorar tu experiencia digital.</p>
+    </section>
+
+</main>
+
+    <footer>
+       <p>Derechos reservados a Chempy© | Contactanos en <a href="mailto:davidestrada.work@gmail.com">davidestrada.work@gmail.com</a></p>
+      </footer>
 
 </body>
 </html>
