--- a/index.html
+++ b/index.html
@@ -44,18 +44,17 @@
         Nos encargamos de todo lo relacionado con Diseño UI y UX
       </p>
     </article>
-
-    </section>
-
-    <section id="contenido-relacionado">
-          <h2>Contenido Relacionado</h2>
-          <p>Explora mas sobre nuestras solcuiones avanzadas para mejorar tu experiencia digital.</p>
-    </section>
-
 </main>
+</section>
+
+<aside>
+          <h2>Noticias recientes</h2>
+          <p>Explora mas sobre nuestras soluciones avanzadas para mejorar tu experiencia digital.</p>
+</aside>
 
     <footer>
-       <p>Derechos reservados a Chempy© | Contactanos en <a href="mailto:davidestrada.work@gmail.com">davidestrada.work@gmail.com</a></p>
+       <p>&copy; 2025 David's Tech | Derechos reservados a Chempy</p> 
+       <p>Contactanos en <a href="mailto:davidestrada.work@gmail.com">davidestrada.work@gmail.com</a></p>
       </footer>
 
 </body>
